[gd_scene load_steps=5 format=3 uid="uid://da65y42hxutpe"]

[ext_resource type="Script" uid="uid://cyddt4j8ia6w4" path="res://scripts/factoryshop.gd" id="1_1l46r"]
[ext_resource type="Texture2D" uid="uid://bqnjie5smya7t" path="res://images/shop.png" id="1_xfvoa"]
[ext_resource type="Texture2D" uid="uid://lexi7vu764cp" path="res://images/shop_selection.png" id="2_1l46r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfvoa"]
size = Vector2(6.66667, 6.66667)

[node name="Shop" type="Node2D" groups=["constant_size", "get_hour_update", "selectable", "shop"]]
texture_filter = 1
scale = Vector2(3, 3)
script = ExtResource("1_1l46r")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -1.5)
texture = ExtResource("1_xfvoa")

[node name="SelectionSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1.5)
texture = ExtResource("2_1l46r")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2.66667)
shape = SubResource("RectangleShape2D_xfvoa")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
